# rs-readme

./: Cargo.toml  README.md
src/: cli.rs  content_finder.rs  lib.rs  main.rs  markdown_converter.rs  offline_converter.rs  static_files.rs  web_server.rs
src/converter/: github_converter.rs  mod.rs  offline_converter.rs
static/: style.css
test_dir/: README.md  a.md  b.md
tests/: route_tests.rs
