[package]
name = "rs_readme"
version = "0.1.0"
authors = ["Greg Cline <gregrcline@gmail.com>"]
edition = "2018"

[[bin]]
name = "rs-readme"
path = "src/main.rs"

[lib]
name = "rs_readme"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
surf = "1.0.3"
serde = "1.0.105"
serde_derive = "1.0.105"
futures = "0.3.5"
async-std = { version = "1.6.2", features = [ "attributes" ]}
log = "0.4.8"
pretty_env_logger = "0.4.0"
async-trait = "0.1.26"
horrorshow = "0.8.3"
http-types = "2.3.0"
structopt = "0.3.12"
pulldown-cmark = { version = "0.7.2", default-features = false }
sha-1 = "0.9.1"
generic-array = "0.14.3"
serde_json = "1.0.57"


[dev-dependencies]
mockito = "0.23.3"
http-service-mock = "0.5.0"
http-service = "0.5.0"
pretty_assertions = "0.6.1"

